@@ -1,0 +1,11 @@
+id = dom_id(@user)
+
+if @user.errors.empty?
+  page[id].replace :partial => "user", :collection => [ @user ]
+  page[id].visual_effect :highlight, :duration => 1.0
+  page << refresh_sidebar(:index)
+else  
+  page[id].replace_html :partial => "edit"
+  page[id].visual_effect :shake, :duration => 0.25, :distance => 6
+  page[:user_username].focus
+end
